--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
   },
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/noellch/noellch-theme"
   },
   "license": "MIT"
 }
