--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "noellch",
   "displayName": "noellch",
-  "description": "A retro, chill dark theme inspired by late summer sunset walks on the beach \u2014 where summer meets autumn, warm breeze, cold beer, golden hour vibes.",
-  "version": "0.2.0",
+  "description": "A retro, chill dark theme inspired by late summer sunset walks on the beach — where summer meets autumn, warm breeze, cold beer, golden hour vibes.",
+  "version": "0.2.1",
   "publisher": "noellch",
   "author": {
     "name": "noellch"
