--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "noellch",
   "displayName": "noellch",
-  "description": "A retro, chill dark theme inspired by late summer sunset walks on the beach — where summer meets autumn, warm breeze, cold beer, golden hour vibes.",
-  "version": "0.2.3",
+  "description": "Late summer sunset on the beach. Warm breeze, cold beer, golden hour fading into autumn dusk. A chill vibe for your editor.",
+  "version": "0.2.0",
   "publisher": "noellch",
   "author": {
     "name": "noellch"
