--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "noellch",
   "displayName": "Noellch Theme",
-  "description": "Late summer sunset on the beach. Warm breeze, cold beer, golden hour fading into autumn dusk. A chill vibe for your editor.",
-  "version": "0.5.0",
+  "description": "Late summer sunset on the beach. Warm breeze, cold beer, golden hour fading into autumn dusk. A faded film palette for long sessions.",
+  "version": "0.7.0",
   "publisher": "noellch",
   "author": {
     "name": "noellch"
